refactor ai client factory class